Style Fix: set no-wrap for p > a
- a elements inside paragraphs were having trouble with rendering the
background color, leading to rather unintended shapes when the link
covers 2 lines. This commit disables wrapping for p > a elements

--- a/themes/basakbeykoz/react-src/src/styles/base/_base.scss
+++ b/themes/basakbeykoz/react-src/src/styles/base/_base.scss
@@ -44,6 +44,7 @@ p {
     text-decoration: underline;
     text-decoration-color: #{get-color('ui-decoration')};
     text-decoration-thickness: 2px;
+    white-space: nowrap;
     position: relative;
 
     &:hover {
